# ATLAS

./: .gitignore  README.md
docs/: firmware.md  modes.md  protocol.md  requirements.md  use_scenarios.md
firmware/.metadata/: .log4j2.xml  version.ini
firmware/atlas_firmware/: .cproject  .project  atlas_firmware Debug.launch
firmware/atlas_firmware/Inc/: adc.h  normal.h  packet.h  uart.h
firmware/atlas_firmware/Src/: adc.c  main.c  normal.c  packet.c  uart.c
ground/backend/: Cargo.toml
ground/backend/logs/: live_COM7_1775498032_errors.txt  live__dev_ttyACM0_1775463526_errors.txt  live__dev_ttyACM0_1775463526_packets.atl  live__dev_ttyACM0_1775498706_errors.txt  live__dev_ttyACM0_1775498706_packets.atl  sim_errors.txt  sim_packets.atl
ground/backend/src/: main.rs  session.rs
ground/logger/: Cargo.toml  sim_packets.atl
ground/logger/logs/: sim_errors.txt  sim_packets.atl
ground/logger/src/: lib.rs  main.rs
ground/protocol/: Cargo.toml
ground/protocol/lib/: packet.rs
ground/protocol/tests/: crc_checker_tests.rs  packet_decoder_tests.rs  packet_encoder_tests.rs
ground/replay/: Cargo.toml
ground/replay/src/: lib.rs  main.rs
ground/simulator/: Cargo.toml  sim_packets.atl
ground/simulator/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
ui/src/: App.tsx  main.tsx
ui/src/components/: CommandConsole.tsx  FaultPanel.tsx  GraphView.tsx  ReplaySystem.tsx  TelemetryPanel.tsx
ui/src/contexts/: TelemetryProvider.tsx
ui/src/lib/: types.ts
(+16 files in other folders)
