[package]
name = "atlas_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
atlas_protocol = { path = "../protocol" }
atlas_logger = { path = "../logger" }
atlas_simulator = { path = "../simulator" }
atlas_replay = { path = "../replay" }
tokio = {version = "1.50.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
axum = {version = "0.8.8", features = ["ws"]}
serde_json = "1.0.149"
tower-http = { version = "0.5.2", features = ["cors"] }
serialport = { version = "4.7.0", default-features = false }


[[bin]]
name = "backend"
path = "src/main.rs"
